Fixed jumping navigationmenu

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,20 +10,20 @@
 /* ==========================================================================
    SCSS Variables
    ========================================================================== */
-/*
+/* 
    Page
    ========================================================================== */
-/*
+/* 
    Typography
    ========================================================================== */
 body {
   margin-top: 26px;
   font-size: 16px; }
 
-/*
+/* 
    Colors
    ========================================================================== */
-/*
+/* 
    Screen sizes
    ========================================================================== */
 /* ==========================================================================
@@ -2801,14 +2801,16 @@ blockquote {
 tt, code, kbd, samp, pre {
   font-family: monospace; }
 
-p code,
-li code {
+p > code,
+a > code,
+li > code,
+figcaption > code,
+td > code {
+  margin: 0 2px;
+  padding: 0 5px;
   font-size: 12px;
   font-size: 0.75rem;
   line-height: 1.5;
-  white-space: nowrap;
-  margin: 0 2px;
-  padding: 0 5px;
   border: 1px solid #e6e6e6;
   background-color: #f2f2f2;
   border-radius: 3px; }
@@ -2829,18 +2831,42 @@ pre {
 /* ==========================================================================
    Syntax Highlighting
    ========================================================================== */
-pre.highlight {
-  padding: 1em; }
-
-.highlight {
+div.highlighter-rouge,
+code.highlight {
+  position: relative;
   margin-bottom: 1.5em;
+  color: #d0d0d0;
   font-size: 12px;
   font-size: 0.75rem;
   line-height: 1.5;
-  color: #d0d0d0;
   border: 1px solid #dbdbdb;
-  background-color: #272822;
   border-radius: 3px;
+  background-color: #272822; }
+  div.highlighter-rouge .highlight,
+  code.highlight .highlight {
+    margin: 0;
+    padding: 1em; }
+
+code.highlight {
+  padding-left: 1em;
+  padding-right: 1em; }
+
+.highlight table {
+  font-size: 1em;
+  border: 0; }
+  .highlight table td {
+    padding: 5px;
+    border: 0; }
+    .highlight table td.gutter {
+      padding-right: 1em;
+      color: #ccc; }
+  .highlight table pre {
+    margin: 0; }
+
+.highlight pre {
+  width: 100%; }
+
+.highlight {
   /* Comment */
   /* Error */
   /* Keyword */
@@ -2899,10 +2925,6 @@ pre.highlight {
   /* Name.Variable.Global */
   /* Name.Variable.Instance */
   /* Literal.Number.Integer.Long */ }
-  .highlight pre {
-    position: relative;
-    margin: 0;
-    padding: 1em; }
   .highlight .lineno {
     padding-right: 24px;
     color: #8f908a; }
